// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store:middlewares:preparePubSub preparePubSub middleware All data in Last 1`] = `
Array [
  Object {
    "payload": Object {
      "tbdId": "Reporting.STAT_SU_PID<ReportingParameter>:1:1",
    },
    "type": "INJECT_NEW_DATA",
  },
  Object {
    "payload": Object {
      "dataId": Object {
        "catalog": "Reporting",
        "comObject": "ReportingParameter",
        "domainId": 1,
        "parameterName": "STAT_SU_PID",
        "sessionId": 1,
      },
      "tbdId": "Reporting.STAT_SU_PID<ReportingParameter>:1:1",
    },
    "type": "ON_INCOMING_PUBSUB_DATA",
  },
]
`;

exports[`store:middlewares:preparePubSub preparePubSub middleware Not in Last 1`] = `
Array [
  Object {
    "payload": Object {
      "dataId": Object {
        "catalog": "Reporting",
        "comObject": "ReportingParameter",
        "domainId": 1,
        "parameterName": "STAT_SU_PID",
        "sessionId": 1,
      },
      "tbdId": "Reporting.STAT_SU_PID<ReportingParameter>:1:1",
    },
    "type": "ON_INCOMING_PUBSUB_DATA",
  },
]
`;

exports[`store:middlewares:preparePubSub preparePubSub middleware One data in Last 1`] = `
Array [
  Object {
    "payload": Object {
      "tbdId": "Reporting.STAT_SU_PID<ReportingParameter>:1:1",
    },
    "type": "INJECT_NEW_DATA",
  },
  Object {
    "payload": Object {
      "dataId": Object {
        "catalog": "Reporting",
        "comObject": "ReportingParameter",
        "domainId": 1,
        "parameterName": "STAT_SU_PID",
        "sessionId": 1,
      },
      "tbdId": "Reporting.STAT_SU_PID<ReportingParameter>:1:1",
    },
    "type": "ON_INCOMING_PUBSUB_DATA",
  },
]
`;

exports[`store:middlewares:preparePubSub preparePubSub middleware Range Data to add in store 1`] = `
Array [
  Object {
    "payload": Object {
      "tbdId": "Reporting.STAT_SU_PID<ReportingParameter>:1:1",
    },
    "type": "INJECT_NEW_DATA",
  },
  Object {
    "payload": Object {
      "tbdId": "Reporting.STAT_SU_PID<ReportingParameter>:1:1:extracted.>.1",
    },
    "type": "INJECT_NEW_DATA",
  },
  Object {
    "payload": Object {
      "dataId": Object {
        "catalog": "Reporting",
        "comObject": "ReportingParameter",
        "domainId": 1,
        "parameterName": "STAT_SU_PID",
        "sessionId": 1,
      },
      "tbdId": "Reporting.STAT_SU_PID<ReportingParameter>:1:1",
    },
    "type": "ON_INCOMING_PUBSUB_DATA",
  },
]
`;
